--- a/index.html
+++ b/index.html
@@ -45,20 +45,19 @@
 {
   "imports": {
     "react": "https://esm.sh/react@19.0.0",
+    "react/": "https://esm.sh/react@19.0.0/",
     "react-dom": "https://esm.sh/react-dom@19.0.0",
+    "react-dom/": "https://esm.sh/react-dom@19.0.0/",
     "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
-    "react-router-dom": "https://esm.sh/react-router-dom@7.1.1",
+    "react-router-dom": "https://esm.sh/react-router-dom@7.1.1?deps=react@19.0.0,react-dom@19.0.0",
     "@google/genai": "https://esm.sh/@google/genai@1.34.0",
-    "recharts": "https://esm.sh/recharts@3.6.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/"
+    "recharts": "https://esm.sh/recharts@2.15.0?bundle&deps=react@19.0.0,react-dom@19.0.0"
   }
 }
 </script>
 </head>
 <body class="bg-[#FFFFFF] text-[#333333] mobile-safe-bottom">
     <div id="root"></div>
-    <!-- The following script tag is crucial for loading the application -->
     <script type="module" src="index.tsx"></script>
 </body>
 </html>
